hydroflow/tests/compile-fail/surface_badgeneric_extra.stderr
error: Unknown lifetime generic argument `'a`, expected `'tick` or `'static`.
 --> tests/compile-fail/surface_badgeneric_extra.rs:6:42
  |
6 |         source_iter(0..10) -> identity::<'a, usize>() -> for_each(std::mem::drop);
  |                                          ^^
